build_after_doctor_fix.txt

> Task :compileJava FAILED
/home/phuongnha/SourcesCode/DACN_doctor_booking/src/main/java/com/example/doctorbooking/controller/DoctorController.java:27: error: cannot find symbol
        return doctorService.getAllDoctor();
                            ^
  symbol:   method getAllDoctor()
  location: variable doctorService of type DoctorService
1 error

[Incubating] Problems report is available at: file:///home/phuongnha/SourcesCode/DACN_doctor_booking/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  /home/phuongnha/SourcesCode/DACN_doctor_booking/src/main/java/com/example/doctorbooking/controller/DoctorController.java:27: error: cannot find symbol
          return doctorService.getAllDoctor();
                              ^
    symbol:   method getAllDoctor()
    location: variable doctorService of type DoctorService
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.4.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1s
1 actionable task: 1 executed
